--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,26 @@ dependencies {
     )
 }
 
-test {
-    useJUnitPlatform()
+tasks.withType(Test) {
     systemProperties(System.getProperties())
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task android_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("android")
+    }
+}
+
+task ios_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("ios")
+    }
 }
