--- a/src/test/resources/ios.properties
+++ b/src/test/resources/ios.properties
@@ -1,6 +1,8 @@
 app = bs://444bd0308813ae0dc236f8cd461c02d3afa7901d
 device = iPhone 14 Pro Max
 os_version = 16.0
+login = bsuser_QY1eIK
+password = pRQR2qyUrqxuBtm59o7V
 project = First Java Project
 build = browserstack-build-1
 test_name = first_test
