--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,14 @@ dependencies {
             'com.codeborne:selenide:6.11.2',
             'com.github.javafaker:javafaker:1.0.2',
             'io.qameta.allure:allure-selenide:2.20.1',
-            'org.junit.jupiter:junit-jupiter:5.9.0',
+            'org.junit.jupiter:junit-jupiter:5.9.2',
             'org.slf4j:slf4j-simple:1.7.32',
             'io.github.bonigarcia:webdrivermanager:5.2.1',
             'org.aeonbits.owner:owner:1.0.12',
             'io.rest-assured:rest-assured:5.3.0',
             'io.qameta.allure:allure-rest-assured:2.20.1',
             'com.fasterxml.jackson.core:jackson-databind:2.14.1',
-            'io.appium:java-client:8.2.1',
-            'com.codeborne:selenide-appium:2.5.2'
+            'io.appium:java-client:8.1.1'
     )
     testRuntimeOnly (
             'org.junit.jupiter:junit-jupiter-engine:5.9.2',
