--- a/src/test/resources/android.properties
+++ b/src/test/resources/android.properties
@@ -1,8 +1,10 @@
 app = bs://9ab0053948e9ed321f8dce642987745657d57ce1
 device = Google Pixel 4
 os_version = 11.0
-login = bsuser_QY1eIK
-password = pRQR2qyUrqxuBtm59o7V
+#login = bsuser_QY1eIK
+#password = pRQR2qyUrqxuBtm59o7V
+user_id = testtest_uQyc9M
+user_k = zfdd9HYSws1zZKEXkfXA
 project = First Java Project
 build = browserstack-build-1
 test_name = first_test
