--- a/src/test/resources/ios.properties
+++ b/src/test/resources/ios.properties
@@ -3,6 +3,8 @@ device = iPhone 14 Pro Max
 os_version = 16.0
 login = bsuser_QY1eIK
 password = pRQR2qyUrqxuBtm59o7V
+user_id = testtest_uQyc9M
+user_k = zfdd9HYSws1zZKEXkfXA
 project = First Java Project
 build = browserstack-build-1
 test_name = first_test
