--- a/src/test/resources/ios.properties
+++ b/src/test/resources/ios.properties
@@ -1,9 +1,7 @@
 app = bs://444bd0308813ae0dc236f8cd461c02d3afa7901d
 device = iPhone 14 Pro Max
 os_version = 16.0
-login = bsuser_QY1eIK
-password = pRQR2qyUrqxuBtm59o7V
-user_id = testtest_uQyc9M
+user_n = testtest_uQyc9M
 user_k = zfdd9HYSws1zZKEXkfXA
 project = First Java Project
 build = browserstack-build-1
